--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -94,6 +94,14 @@ section {
     transition: ease 0.3 all;
 }
 
+.activemenu {
+    background: #333;
+    color: #fff;
+    transition: ease 0.3 all;
+}
+
+
+
 /* Header Styles */
 .page__header {
     background: #fff;
